--- a/torneo.html
+++ b/torneo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
@@ -25,7 +25,7 @@
         <tr class="line">
             <td class="head">
                 <div class="sym">1</div>
-                <div class="sym"><img src="lib.png" alt=""></div>
+                <div class="sym"><img src="imgs/lib.png" alt=""></div>
                 <div class="sym">Libertad</div>
             </td>
             <td class="nomber">13</td>
@@ -37,17 +37,17 @@
             <td class="nomber">18</td>
             <td class="nomber">32</td>
             <td class="match">
-                <img src="Check.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Minus.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Check.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Minus.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Check.svg"></img>
             </td>
         </tr>
-        <tr>
+        <tr style="background-color: #e8e8e8">
             <td class="head">
                 <div class="sym">2</div>
-                <div class="sym"><img src="cerro.png" alt=""></div>
+                <div class="sym"><img src="imgs/cerro.png" alt=""></div>
                 <div class="sym">Cerro</div>
             </td>
             <td class="nomber">13</td>
@@ -59,17 +59,17 @@
             <td class="nomber">17</td>
             <td class="nomber">13</td>
             <td class="match">
-                <img src="Check.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Minus.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Minus.svg"></img>
             </td>
         </tr>
         <tr>
             <td class="head">
                 <div class="sym">3</div>
-                <div class="sym"><img src="Olimpia.png" alt=""></div>
+                <div class="sym"><img src="imgs/Olimpia.png" alt=""></div>
                 <div class="sym"> Olimpia</div>
             </td>
             <td class="nomber">13</td>
@@ -81,17 +81,17 @@
             <td class="nomber">6</td>
             <td class="nomber">24</td>
             <td class="match">
-                <img src="Check.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Minus.svg"></img>
-                <img src="Cross.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Minus.svg"></img>
+                <img src="svg/Cross.svg"></img>
             </td>
         </tr>
-        <tr>
+        <tr style="background-color: #e8e8e8">
             <td class="head">
                 <div class="sym">4</div>
-                <div class="sym"><img src="Resisrencia.png" alt=""></div>
+                <div class="sym"><img src="imgs/Resisrencia.png" alt=""></div>
                 <div class="sym"> Resistencia</div>
             </td>
             <td class="nomber">13</td>
@@ -103,18 +103,18 @@
             <td class="nomber">6</td>
             <td class="nomber">23</td>
             <td class="match">
-                <img src="Check.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Minus.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Minus.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Minus.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Minus.svg"></img>
             </td>
         </tr>
 
         <tr>
             <td class="head">
                 <div class="sym">5</div>
-                <div class="sym"><img src="SoldeAmerica.png" alt=""></div>
+                <div class="sym"><img src="imgs/SoldeAmerica.png" alt=""></div>
                 <div class="sym">Sol de América</div>
             </td>
             <td class="nomber">13</td>
@@ -126,17 +126,17 @@
             <td class="nomber">-3</td>
             <td class="nomber">18</td>
             <td class="match">
-                <img src="Minus.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Cross.svg"></img>
+                <img src="svg/Minus.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Cross.svg"></img>
             </td>
         </tr>
-        <tr>
+        <tr style="background-color: #e8e8e8">
             <td class="head">
                 <div class="sym">6</div>
-                <div class="sym"><img src="nacional.png" alt=""></div>
+                <div class="sym"><img src="imgs/nacional.png" alt=""></div>
                 <div class="sym">Nacional</div>
             </td>
             <td class="nomber">13</td>
@@ -148,17 +148,17 @@
             <td class="nomber">-5</td>
             <td class="nomber">17</td>
             <td class="match">
-                <img src="Cross.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Check.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Check.svg"></img>
             </td>
         </tr>
         <tr>
             <td class="head">
                 <div class="sym">7</div>
-                <div class="sym"><img src="Tacuary.png" alt=""></div>
+                <div class="sym"><img src="imgs/Tacuary.png" alt=""></div>
                 <div class="sym">Tacuary</div>
             </td>
             <td class="nomber">13</td>
@@ -170,17 +170,17 @@
             <td class="nomber">-2</td>
             <td class="nomber">16</td>
             <td class="match">
-                <img src="Cross.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
             </td>
         </tr>
-        <tr>
+        <tr style="background-color: #e8e8e8">
             <td class="head">
                 <div class="sym">8</div>
-                <div class="sym"><img src="Guarani.png" alt=""></div>
+                <div class="sym"><img src="imgs/Guarani.png" alt=""></div>
                 <div class="sym">Guaraní</div>
             </td>
             <td class="nomber">13</td>
@@ -192,17 +192,17 @@
             <td class="nomber">-2</td>
             <td class="nomber">15</td>
             <td class="match">
-                <img src="Minus.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Check.svg"></img>
+                <img src="svg/Minus.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Check.svg"></img>
             </td>
         </tr>
         <tr>
             <td class="head">
                 <div class="sym">9</div>
-                <div class="sym"><img src="Guaireña.png" alt=""></div>
+                <div class="sym"><img src="imgs/Guaireña.png" alt=""></div>
                 <div class="sym">Guaireña</div>
             </td>
             <td class="nomber">13</td>
@@ -214,17 +214,17 @@
             <td class="nomber">-7</td>
             <td class="nomber">12</td>
             <td class="match">
-                <img src="Cross.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Check.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Check.svg"></img>
             </td>
         </tr>
-        <tr>
+        <tr style="background-color: #e8e8e8">
             <td class="head">
                 <div class="sym">10</div>
-                <div class="sym"><img src="12.png" alt=""></div>
+                <div class="sym"><img src="imgs/12.png" alt=""></div>
                 <div class="sym">12 de Octubre</div>
             </td>
             <td class="nomber">13</td>
@@ -236,17 +236,17 @@
             <td class="nomber">-11</td>
             <td class="nomber">21</td>
             <td class="match">
-                <img src="Check.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Minus.svg"></img>
-                <img src="Minus.svg"></img>
-                <img src="Minus.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Minus.svg"></img>
+                <img src="svg/Minus.svg"></img>
+                <img src="svg/Minus.svg"></img>
             </td>
         </tr>
         <tr>
             <td class="head">
                 <div class="sym">11</div>
-                <div class="sym"><img src="General Caballero.png" alt=""></div>
+                <div class="sym"><img src="imgs/General Caballero.png" alt=""></div>
                 <div class="sym">General Caballerro JLM</div>
             </td>
             <td class="nomber">13</td>
@@ -258,18 +258,18 @@
             <td class="nomber">-6</td>
             <td class="nomber">9</td>
             <td class="match">
-                <img src="Cross.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Minus.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Minus.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Minus.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Minus.svg"></img>
 
             </td>
         </tr>
-        <tr>
+        <tr style="background-color: #e8e8e8">
             <td class="head">
                 <div class="sym">12</div>
-                <div class="sym"><img src="Ameli.png" alt=""></div>
+                <div class="sym"><img src="imgs/Ameli.png" alt=""></div>
                 <div class="sym">Sportivo Ameliano</div>
             </td>
             <td class="nomber">13</td>
@@ -281,11 +281,11 @@
             <td class="nomber">-11</td>
             <td class="nomber">9</td>
             <td class="match">
-                <img src="Cross.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Check.svg"></img>
-                <img src="Cross.svg"></img>
-                <img src="Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Check.svg"></img>
+                <img src="svg/Cross.svg"></img>
+                <img src="svg/Cross.svg"></img>
             </td>
         </tr>
     </table>
