fixes ansfor >100mil

--- a/Ejercicios/index.html
+++ b/Ejercicios/index.html
@@ -320,10 +320,14 @@
                     //         ans = string;
                     //     }
                     // }
-                    document.getElementById("ansver").innerHTML = ans;
+                    if (parseInt(ans)>100000000000){
+                        return document.getElementById("ansver").innerHTML = "";
+                    }
+                    return document.getElementById("ansver").innerHTML = ans;
 
                 }
             }
+
         }
 
 
