--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Tateti</title>
 </head>
+
 <body>
-    <h1>Player 1</h1>
-    <h1>Player 2</h1>
+    <h1>Player X</h1>
+    <h1>Player O</h1>
+    <h2>Scores</h2>
+    <div class="">
+        <p id="PlayerX">0</p>
+        <p id="PlayerO">0</p>
+    </div>
+
     <script src="script.js"></script>
 </body>
+
 </html>
