--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <div class="">
         <p id="PlayerX">0</p>
         <p id="PlayerO">0</p>
-    </div>
 
+        <div id="message" style="font-size:1.5rem; margin:10px; color:green;"></div>
+    </div>
+    <div id="game"></div>
     <script src="script.js"></script>
 </body>
 
