fixes with choosing player

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="menu">
         <div class="players">
             <div class="player">
-                <h2>Player X</h2>
+                <h2 id="playerx">Player X</h2>
                 <div id="PlayerX" class="score">0</div>
             </div>
             <div class="player">
-                <h2>Player O</h2>
+                <h2 id="playero">Player O</h2>
                 <div id="PlayerO" class="score">0</div>
             </div>
         </div>
